--- a/index.html
+++ b/index.html
@@ -6,9 +6,50 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+    <link rel="stylesheet" href="Main.scss">
 </head>
 
 <body>
+
+    <article>
+        <header>
+            <div class="headerContainer">
+                <div class="headerLogo">NETFLIX</div>
+                <div class="headerNavbarLinks">
+                    <ul>
+                        <li>Home</li>
+                        <li>TV Programmes</li>
+                        <li>Films</li>
+                        <li>Orginals</li>
+                        <li>Recently Added</li>
+                        <li>My List</li>
+                    </ul>
+                </div>
+
+                <div class="headerNavbar">
+                    <i class="fa-solid fa-bars"></i>
+                    <div class="searchIcon"><i class="fa-solid fa-magnifying-glass"></i></div>
+                    <div class="notificationIcon"><i class="fa-solid fa-bell"></i></div>
+                    <div class="profile"></div>
+                </div>
+            </div>
+        </header>
+        <main>
+            <div class="homeSection">
+                <div class="homeSectionContents">
+                    <p id="filmType"><span>N</span> film</p>
+                    <h1 id="heroBannerName">Film Name</h1>
+                    <div class="homeSectionButtons">
+                        <button class="homePageButton" id="playButton">Play!</button>
+                        <button class="homePageButton" id="addToListButton">+ MyList</button>
+                    </div>
+                </div>
+            </div>
+        </main>
+    </article>
+
+    <script src="script.ts"></script>
 
 </body>
 
