--- a/index.html
+++ b/index.html
@@ -46,7 +46,68 @@
                     </div>
                 </div>
             </div>
+
+            <div class="filmSection">
+                <div class="filmSectionscontainer">
+                    <div class="trending">
+                        <p>Trending</p>
+                        <div class="cards"></div>
+                    </div>
+                    <div class="popular">
+                        <p>Popular</p>
+                        <div class="cards"></div>
+                    </div>
+                    <div class="action">
+                        <p>Action</p>
+                        <div class="cards"></div>
+                    </div>
+                    <div class="aeries">
+                        <p>Series</p>
+                        <div class="cards"></div>
+                    </div>
+                </div>
+            </div>
         </main>
+        <footer>
+            <div class="footerContainer">
+                <div class="socialMediaIcons">
+                    <i class="fa-brands fa-facebook"></i>
+                    <i class="fa-brands fa-instagram"></i>
+                    <i class="fa-brands fa-twitter"></i>
+                    <i class="fa-brands fa-youtube"></i>
+                </div>
+                <div class="footerLinksContainer">
+                    <div class="info1 footerLinks">
+                        <a href="#">FAQ</a>
+                        <a href="#">Investor Relations</a>
+                        <a href="#">Ways to watch</a>
+                        <a href="#">Netflix originals</a>
+                    </div>
+                    <div class="info2 footerLinks">
+                        <a href="#">Help Center</a>
+                        <a href="#">Jobs</a>
+                        <a href="#">Terms of use</a>
+                        <a href="#">Contact us</a>
+                    </div>
+                    <div class="info3 footerLinks">
+                        <a href="#">Account</a>
+                        <a href="#">Redeem Gift Cards</a>
+                        <a href="#">Privacy</a>
+                        <a href="#">Speed Test</a>
+                    </div>
+                    <div class="info4 footerLinks">
+                        <a href="#">Media Center</a>
+                        <a href="#">Buy gift Cards</a>
+                        <a href="#">Cookie Preferences</a>
+                        <a href="#">Legal Notices</a>
+                    </div>
+                </div>
+                <div class="language">
+                    <i class="fa-solid fa-globe"></i>
+                    <P>English</P>
+                </div>
+            </div>
+        </footer>
     </article>
 
     <script src="script.ts"></script>
