--- a/index.html
+++ b/index.html
@@ -49,23 +49,55 @@
 
             <div class="filmSection">
                 <div class="filmSectionscontainer">
-                    <div class="trending">
+
+                    <div class="newFilmSection">
                         <p>Trending</p>
-                        <div class="cards"></div>
+                        <div class="carouselButtons">
+                            <div class="leftButton"><i class="fa-solid fa-arrow-left"></i></div>
+                            <div class="rightButton"><i class="fa-solid fa-arrow-right"></i></div>
+                        </div>
+                        <div class="filmBar">
+                            <div class="cards"></div>
+                            <div class="cards"></div>
+                            <div class="cards"></div>
+                            <div class="cards"></div>
+                            <div class="cards"></div>
+                            <div class="cards"></div>
+                        </div>
                     </div>
-                    <div class="popular">
-                        <p>Popular</p>
-                        <div class="cards"></div>
+                    <div class="newFilmSection">
+                        <p>Trending</p>
+                        <div class="carouselButtons">
+                            <div class="leftButton"><i class="fa-solid fa-arrow-left"></i></div>
+                            <div class="rightButton"><i class="fa-solid fa-arrow-right"></i></div>
+                        </div>
+                        <div class="filmBar">
+                            <div class="cards"></div>
+                            <div class="cards"></div>
+                            <div class="cards"></div>
+                            <div class="cards"></div>
+                            <div class="cards"></div>
+                            <div class="cards"></div>
+                        </div>
                     </div>
-                    <div class="action">
-                        <p>Action</p>
-                        <div class="cards"></div>
+                    <div class="newFilmSection">
+                        <p>Trending</p>
+                        <div class="carouselButtons">
+                            <div class="leftButton"><i class="fa-solid fa-arrow-left"></i></div>
+                            <div class="rightButton"><i class="fa-solid fa-arrow-right"></i></div>
+                        </div>
+                        <div class="filmBar">
+                            <div class="cards"></div>
+                            <div class="cards"></div>
+                            <div class="cards"></div>
+                            <div class="cards"></div>
+                            <div class="cards"></div>
+                            <div class="cards"></div>
+                        </div>
                     </div>
-                    <div class="aeries">
-                        <p>Series</p>
-                        <div class="cards"></div>
-                    </div>
+
                 </div>
+            </div>
             </div>
         </main>
         <footer>
@@ -110,7 +142,7 @@
         </footer>
     </article>
 
-    <script src="script.ts"></script>
+    <script src="script.ts" type="module"></script>
 
 </body>
 
