--- a/index.html
+++ b/index.html
@@ -49,55 +49,28 @@
 
             <div class="filmSection">
                 <div class="filmSectionscontainer">
+                    <div>
+                        <p>Trending > </p>
+                        <div class="newFilmSection">
+                            <button class="handel leftButton"><i class="fa-solid fa-arrow-left"></i></button>
+                            <div class="slider">
+                                <div class="cards">1</div>
+                                <div class="cards">2</div>
+                                <div class="cards">3</div>
+                                <div class="cards">4</div>
+                                <div class="cards">5</div>
+                                <div class="cards">6</div>
+                                <div class="cards">7</div>
+                                <div class="cards">8</div>
+                                <div class="cards">9</div>
+                                <div class="cards">10</div>
+                            </div>
+                            <button class="handel rightButton"><i class="fa-solid fa-arrow-right"></i></button>
+                        </div>
+                    </div>
 
-                    <div class="newFilmSection">
-                        <p>Trending</p>
-                        <div class="carouselButtons">
-                            <div class="leftButton"><i class="fa-solid fa-arrow-left"></i></div>
-                            <div class="rightButton"><i class="fa-solid fa-arrow-right"></i></div>
-                        </div>
-                        <div class="filmBar">
-                            <div class="cards"></div>
-                            <div class="cards"></div>
-                            <div class="cards"></div>
-                            <div class="cards"></div>
-                            <div class="cards"></div>
-                            <div class="cards"></div>
-                        </div>
-                    </div>
-                    <div class="newFilmSection">
-                        <p>Trending</p>
-                        <div class="carouselButtons">
-                            <div class="leftButton"><i class="fa-solid fa-arrow-left"></i></div>
-                            <div class="rightButton"><i class="fa-solid fa-arrow-right"></i></div>
-                        </div>
-                        <div class="filmBar">
-                            <div class="cards"></div>
-                            <div class="cards"></div>
-                            <div class="cards"></div>
-                            <div class="cards"></div>
-                            <div class="cards"></div>
-                            <div class="cards"></div>
-                        </div>
-                    </div>
-                    <div class="newFilmSection">
-                        <p>Trending</p>
-                        <div class="carouselButtons">
-                            <div class="leftButton"><i class="fa-solid fa-arrow-left"></i></div>
-                            <div class="rightButton"><i class="fa-solid fa-arrow-right"></i></div>
-                        </div>
-                        <div class="filmBar">
-                            <div class="cards"></div>
-                            <div class="cards"></div>
-                            <div class="cards"></div>
-                            <div class="cards"></div>
-                            <div class="cards"></div>
-                            <div class="cards"></div>
-                        </div>
-                    </div>
 
                 </div>
-            </div>
             </div>
         </main>
         <footer>
