search input created(but not fonctional)

--- a/index.html
+++ b/index.html
@@ -28,8 +28,11 @@
                 </div>
 
                 <div class="headerNavbar">
-                    <i class="fa-solid fa-bars"></i>
-                    <div class="searchIcon"><i class="fa-solid fa-magnifying-glass"></i></div>
+                    <i class="fa-solid fa-bars hamburgerBar"></i>
+                    <div class="searchIcon">
+                        <input class="hide" id="searchInput" type="text">
+                        <i class="fa-solid fa-magnifying-glass"></i>
+                    </div>
                     <div class="notificationIcon"><i class="fa-solid fa-bell"></i></div>
                     <div class="profile"></div>
                 </div>
