searchbar design done

--- a/index.html
+++ b/index.html
@@ -30,11 +30,12 @@
                 <div class="headerNavbar">
                     <i class="fa-solid fa-bars hamburgerBar"></i>
                     <div class="searchIcon">
-                        <input class="hide" id="searchInput" type="text">
+                        <input class="hide" id="searchInput" type="text"><button
+                            class="searchInputButton hide">Search</button>
                         <i class="fa-solid fa-magnifying-glass"></i>
                     </div>
                     <div class="notificationIcon"><i class="fa-solid fa-bell"></i></div>
-                    <div class="profile"></div>
+                    <div class="profile">You</div>
                 </div>
             </div>
         </header>
